# Flet_MinecraftLauncher_InnLab

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: app_init.py  launcher.py  main.py  updater.py  utils.py
